# prettyfly

./: .editorconfig  .gitignore  README.md  build.ps1  build.sh  configure.ps1  configure.sh  run.ps1  run.sh  setup.ps1  setup.sh
engine/: .clang-format  .gitattributes  CMakeLists.txt  vcpkg.json
engine/assets/models/f22_raptor/: license.txt  scene.gltf
engine/config/: engine.ini
engine/scripts/: normalize-line-endings.ps1
engine/src/: main.cpp
engine/src/core/: Camera.h  Config.h  Input.h  Mesh.h  MeshLoader.cpp  MeshLoader.h
engine/src/examples/: DebugShapes.h  ExampleBase.h  ExampleTemplate.h  MeshViewer.h
engine/src/rendering/: RenderContext.h  Shader.h  ShaderSources.h
